Revision history for WWW::Mechanize

    [TESTS]
    - Drop Test::Warn prerequisite and only use Test::Warnings

{{$NEXT}}
    [FIXED]
    - Raise minimum Perl to 5.8 to match what we test, what dependencies
      depend on, etc. (GH#352) (James Raspass)
    [DOCUMENTATION]
    - Various POD fixes (Julien Fiegehenn)

2.15      2022-08-21 07:47:35Z
    [FIXED]
    - There was a test suite failure on some Windows machines introduced in
      2.14 that is now fixed. (GH#350) (Julien Fiegehenn)

    [ENHANCEMENTS]
    - form_with and all_forms_with() now support the "action" attribute to find
      forms (GH#349) (Julien Fiegehenn)

2.14      2022-08-15 19:19:24Z
    [FIXED]
    - File upload fields now correctly handle overwriting the file name and
      passing in content without a real file (GH#249) (Gil Magno and Julien
      Fiegehenn)
    - HTML::Form bumped to 6.08 (GH#347) (Julien Fiegehenn)

    [ENHANCEMENTS]
    - Add autocheck() to enable or disable autochecking at run time in
      addition to setting it at object creation (GH#232) (Julien Fiegehenn)
    - mech_dump now errors appropriately when it cannot open a URL or file
      instead of claiming it has the wrong MIME type (GH#292) (Julien Fiegehenn)

2.13      2022-07-29 09:44:46Z
    [ENHANCEMENTS]
    - mech_dump now treats all local files like HTML regardless of what it
      thinks their content types are (GH#63) (Julien Fiegehenn)
    - We now consistently use our own die() method and therefore the onerror
      handler wherever possible (GH#80) (Julien Fiegehenn)

    [TESTS]
    - Add tests for field() when working on a <textarea> (GH#220) (Julien
      Fiegehenn)

2.12      2022-07-20 06:45:40Z

    [ENHANCEMENTS]
    - form_name(), form_id(), form_with() and form_with_fields() can now all
      return the nth instance of a form instead of always returning the first
      instance (GH#110) (Jeff Culverhouse and Julien Fiegehenn)

    [TESTS]